minor mods to config

--- a/config/run_dada2_v0.000.yml
+++ b/config/run_dada2_v0.000.yml
@@ -3,8 +3,8 @@
 # required:  email, input_path, output_path
 # all other values have defaults if unspecified
 email: btupper@bigelow.org
-input_path: "/home/btupper/edna/data/examples/SK_18S_raw_data"
-output_path: "/home/btupper/edna/data/examples/SK_18S_raw_data_results"
+input_path: "/home/btupper/edna/data/examples/ben_demo_raw"
+output_path: "/home/btupper/edna/data/examples/ben_demo_raw_results"
 dada2:
   maxN: 0.0
   multithread: 32.0
@@ -13,6 +13,6 @@ cutadapt:
   app: /mnt/modules/bin/dada2/1.12/bin/cutadapt
   --minimum-length: 25.0
   -n: 2.0
-primer_benchmarks:
+primer:
   FWD: "CYGCGGTAATTCCAGCTC"
   REV: "AYGGTATCTRATCRTCTTYG"
