--- a/config/run_dada2_v0.000.yml
+++ b/config/run_dada2_v0.000.yml
@@ -2,11 +2,12 @@
 #
 # required:  email, input_path, output_path
 # all other values have defaults if unspecified
+version: v0.000
 email: "btupper@bigelow.org"
 input_path: "/home/btupper/edna/data/examples/ben_demo_raw"
 output_path: "/home/btupper/edna/data/examples/ben_demo_raw_results"
 dada2_filterAndTrim_filtN:
-  subdir: "filtN"
+  name: "filtN"
   maxN: 0.0
   multithread: 32.0
   compress: no
@@ -14,7 +15,7 @@ cutadapt:
   app: "/mnt/modules/bin/dada2/1.12/bin/cutadapt"
   more_args: "--minimum-length 25.0 -n 2.0"
 dada2_filterAndTrim_filtered:
-  subdir: "filtered"
+  name: "filtered"
   truncLen: 
   - 275
   - 225
@@ -26,6 +27,9 @@ dada2_filterAndTrim_filtered:
   rm.phix: yes
   multithread: 32.0
   compress: no
+dada2_dada_filtered:
+  name: "dada"
+  multithread: 32.0
 primer:
   FWD: "CYGCGGTAATTCCAGCTC"
   REV: "AYGGTATCTRATCRTCTTYG"
