--- a/config/run_dada2_v0.000.yml
+++ b/config/run_dada2_v0.000.yml
@@ -10,6 +10,8 @@ input_path: "/home/btupper/edna/data/examples/ben_demo_raw"
 output_path: "/home/btupper/edna/data/examples/ben_demo_raw_results"
 verbose: info
 multithread: 24
+dada2_plotQualityProfiles:
+  n: 2
 dada2_filterAndTrim_filtN:
   name: "filtN"
   maxN: 0.0
