--- a/config/run_dada2_v0.001.yml
+++ b/config/run_dada2_v0.001.yml
@@ -1,19 +1,31 @@
 # edna-dada2 configuration file
 #
+# Follows Kevin/Pete's SK18S example
+#
 # required:  email, input_path, output_path
 # all other values have defaults if unspecified
 # verbose can be trace, debug, info (default), warn, error, fatal.  Only messages
 #   at or above severity of verbosity level are output (to console and log)
-version: v0.000
+version: v0.001
 email: "btupper@bigelow.org"
-input_path: "/home/btupper/edna/data/examples/ben_demo_raw"
-output_path: "/home/btupper/edna/data/examples/ben_demo_raw_results"
+input_path: "/home/btupper/edna/data/examples/SK18S"
+output_path: "/home/btupper/edna/data/examples/SK18S_results"
 verbose: info
 multithread: 24
+dada2_plotQualityProfile:
+  nplots: 2
 dada2_filterAndTrim_filtN:
   name: "filtN"
+  truncLen: 
+  - 275
+  - 225
   maxN: 0.0
-  compress: no
+  maxEE:
+  - 2
+  - 2
+  truncQ: 2
+  rm.phix: yes
+  compress: yes
 dada2_learnErrors:
   name: "learnErrors"
 cutadapt:
@@ -30,7 +42,7 @@ dada2_filterAndTrim_filtered:
   - 2
   truncQ: 2
   rm.phix: yes
-  compress: no
+  compress: yes
 dada2_dada_filtered:
   name: "dada"
 dada2_removeBimeraDenovo_seqtab:
