--- a/config/run_dada2_v0.000.yml
+++ b/config/run_dada2_v0.000.yml
@@ -9,7 +9,7 @@ email: "btupper@bigelow.org"
 input_path: "/home/btupper/edna/data/examples/ben_demo_raw"
 output_path: "/home/btupper/edna/data/examples/ben_demo_raw_results"
 verbose: info
-multithread: 24
+multithread: auto
 dada2_plotQualityProfiles:
   nplots: 2
 dada2_filterAndTrim_filtN:
