--- a/3step/asv_18S_preprocess.yaml
+++ b/3step/asv_18S_preprocess.yaml
@@ -27,6 +27,10 @@ primer:
 cutadapt:
   app: "/mnt/modules/bin/dada2/1.14.1/bin/cutadapt"
   more_args: "--minimum-length 25.0 -n 2.0 --discard-untrimmed"
+quality:
+  amplicon_length: 400
+  min_overlap: 20
+  sample_n: 500000
 dada2_filterAndTrim:
   name: "filtN"
   truncLen: "auto"
